sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:7: error: '(' expected but '{' found.
    else if {echange(pos,pos+1); pos = pos - 1}
            ^AlgGnomeSort:9: error: illegal start of simple expression
  }
  ^