sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var n = getNombreValeurs
  var pos = 0
  while (pos != n) {
    if (plusPetit(pos,pos+1)) {pos = pos + 1}
    else if {echange(pos,pos+1); pos = pos - 1}
    else (pos == 0) {pos = pos + 1}
  }
}